--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<title>PacMan FirefoxOS</title>
 	<script src="canvas.js"></script>
-	<script src="models/ghost.js"></script>
-	<script src="models/grid.js"></script>
+	<script src="models/pacman.js"></script>
+	<script src="models/grid.js"></script>	
+	<script src="functions/gridGenerator.js"></script>	
+	<script src="functions/pacmanGenerator.js"></script>
 </head>
 <body>
 	<canvas id="grid">
