--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<script src="canvas.js"></script>
 	<script src="models/pacman.js"></script>
 	<script src="models/grid.js"></script>	
-	<script src="functions/gridGenerator.js"></script>	
+	<script src="functions/gridGenerator.js"></script>
 	<script src="functions/pacmanGenerator.js"></script>
+	<script src="functions/pacmanFunctions.js"></script>
 </head>
 <body>
 	<canvas id="grid">
