Add ghost Object and images.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>PacMan FirefoxOS</title>
 	<script src="canvas.js"></script>
 	<script src="models/pacman.js"></script>
+	<script src="models/ghost.js"></script>
 	<script src="models/grid.js"></script>	
 	<script src="functions/gridGenerator.js"></script>
 	<script src="functions/pacmanGenerator.js"></script>
