--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<script src="functions/pacmanFunctions.js"></script>
 </head>
 <body>
+	<div id="reset">
+		<h3>Restart in 1 second...</h3>
+	</div>
 	<canvas id="grid">
 		Message pour les navigateurs ne supportant pas encore canvas.
 	</canvas>
