Control indentation & add comments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		Message pour les navigateurs ne supportant pas encore canvas.
 	</canvas>
 	<h2>Score <span id="score">0</span></h2>
+	<script src="js/pacman.js"></script>
+	<script src="js/map.js"></script>
 	<script src="js/engine.js"></script>
 </body>
 </html>
