--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>PacMan FirefoxOS</title>
 	<link rel=stylesheet href="css/style.css">
 	<script src="canvas.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.hammer-full.min.js"></script>
 </head>
 <body>
 	<canvas id="grid">
