--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 	<script src="js/ghost_red.js"></script>
 	<script src="js/ghost_blue.js"></script>
 	<script src="js/ghost_orange.js"></script>
+	<script src="js/ghost_pink.js"></script>
 </body>
 </html>
