Delete ghost color file (regroup in ghost object)

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 	
 	<script src="js/pacman.js"></script>
 	<script src="js/map.js"></script>
-	<script src="js/engine.js"></script>
-	<script src="js/ghost_red.js"></script>
-	<script src="js/ghost_blue.js"></script>
-	<script src="js/ghost_orange.js"></script>
-	<script src="js/ghost_pink.js"></script>
+	<script src="js/engine.js"></script>	
+	<script src="js/ghost.js"></script>
 </body>
 </html>
