making more OOP

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 	<h2>Score <span id="score">0</span></h2>
 	<h2 class="life">Life <span id="life">0</span></h2>
 	<button id="restart" onclick="javascript:window.location.reload();">Restart</button><button id="exit" onclick="javascript:window.close();">Exit</button>
-	
+
+	<script src="js/engine.js"></script>
+	<script src="js/creature.js"></script>
 	<script src="js/pacman.js"></script>
 	<script src="js/map.js"></script>
-	<script src="js/engine.js"></script>	
 	<script src="js/ghost.js"></script>
 </body>
 </html>
