AI for all ghosts

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 	<script src="js/pacman.js"></script>
 	<script src="js/map.js"></script>
 	<script src="js/ghost.js"></script>
+	<script src="js/types.js"></script>
 </body>
 </html>
