Ghost House, refactoring, bug fixes
+ Eatable Ghosts fix
+ GhostHouse door fixed
+ new jQuery version - 2.1.1

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
+	<meta charset="UTF-8">
 	<title>PacMan FirefoxOS</title>
+
 	<link rel=stylesheet href="css/style.css">
+
 	<script src="canvas.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.hammer-full.min.js"></script>
